--- a/templates/feature_template.html
+++ b/templates/feature_template.html
@@ -1,7 +1,7 @@
 <div class="row">
     <div class="col-md-9 col-sm-8">
         <div class="feature">
-            <h2><i class="fa fa-magic"></i> Feature:</h2>
+            <h2><i class="fa fa-magic"></i> User Story :</h2>
 
             <div class="feature-description">
                 <%= name %>
@@ -9,7 +9,7 @@
         </div>
     </div>
     <div class="col-md-3 col-sm-4 feature-statistics">
-        <div class="scenario-label">Scenarios</div>
+        <div class="scenario-label">User Stories</div>
         <div class="scenario-amount-passed"> <%= passedScenariosNumberInFeature %>/<%= scenariosNumberInFeature %> <br/><span>passed</span></div>
         <div class="clear"></div>
         <div class="steps-label">Steps</div>
