--- a/templates/header_template.html
+++ b/templates/header_template.html
@@ -1,5 +1,5 @@
 <header class="<%=status %>">
-    <h1>Cucumber features</h1>
+    <h1>Cucumber User Stories</h1>
     <div class="test-summary">
         <div class="scenarios-summary"><%=scenariosSummary %></div>
         <div class="steps-summary"><%=stepsSummary %></div>
